<resources>
    <string name="app_name">Mr_Motor_</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_task_page">Tasks</string>
    <string name="search_hint">Search</string>
    <string name="no_connection">No Connection</string>
    <string name="text_under_no_connection">No internet connection found. Check your internet connection or try again.</string>
    <string name="btn_go_to_source">GO TO SOURCE</string>
    <string name="start_quiz">START QUIZ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">SIGN UP</string>
    <string name="car_enthusiast">car enthusiast</string>
    <string name="nice_to_meet_you">Nice to meet you,</string>
    <string name="log_in">LOG IN</string>
    <string name="still_no_account">Still no account?</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="favourite_news_and_posts">Favourite news and posts</string>
    <string name="logout">LOGOUT</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="competitions">Competitions</string>
    <string name="racers">Racers</string>
    <string name="new_cars">New cars</string>
    <string name="your_result_is">Your result is</string>
    <string name="congratulations">Congratulations!</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="favourite_posts">Favourite Posts</string>
    <string name="the_greatest_competitions">The Greatest Competitions</string>
    <string name="people_who_changed_the_industry">People who changed the industry</string>
    <string name="my_quiz_results">My Quiz Results</string>
    <string name="my_quizzes">My Quizzes</string>


</resources>