<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.mr_motor_.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/news_fragment" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mr_motor_.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_task_page"
        android:name="com.example.mr_motor_.ui.tasks.TaskFragment"
        android:label="@string/title_task_page"
        tools:layout="@layout/task_fragment" />
</navigation>