<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_welcome_to_the_club"
        android:layout_width="201dp"
        android:layout_height="88dp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/nice_to_meet_you"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="14dp"
        />

    <TextView
        android:id="@+id/tv_buddy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_to_the_club"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/car_enthusiast"
        android:textColor="@color/white"
        android:layout_marginLeft="14dp"
        android:textStyle="normal"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/et_signUpPage_email"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        app:layout_constraintTop_toBottomOf="@id/tv_buddy"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/rectangle_rounded"
        android:backgroundTint="@color/light_grey"
        android:hint="Email"
        android:textColorHint="@color/white"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="57dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/et_signUpPage_password"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        app:layout_constraintTop_toBottomOf="@id/et_signUpPage_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/rectangle_rounded"
        android:backgroundTint="@color/light_grey"
        android:hint="Password"
        android:textColorHint="@color/white"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="15dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"/>

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="165dp"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/background_color"
        app:layout_constraintTop_toBottomOf="@id/et_signUpPage_password"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Forgot password?"
        android:textColor="@color/accent"
        android:textAllCaps="false"
        />

    <Button android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_signUpPage_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/accent"
        android:layout_marginTop="39dp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"

        />

    <TextView
        android:id="@+id/tv_still_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/still_no_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_log_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="60dp"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/background_color"
        app:layout_constraintTop_toBottomOf="@id/btn_log_in"
        app:layout_constraintLeft_toRightOf="@id/tv_still_no_account"
        android:text="Sign Up"
        android:textSize="22sp"
        android:textColor="@color/accent"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>