<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <ImageButton
        android:id="@+id/ib_settingsPage_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_save"
        android:background="@color/background_color"
        android:layout_marginTop="27dp"
        android:layout_marginRight="20dp"
        />

    <ImageView
        android:id="@+id/iv_account_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_person_circle"
        android:background="@color/background_color"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_account_photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Radimir Karabash"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="radimir.karabash@gmail.com"
        android:textColor="#DFE6E9"
        android:textSize="20sp"
        android:textStyle="normal"
        android:layout_marginTop="3dp"/>

    <View
        android:id="@+id/v_settings_cotainer_for_edit"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintRight_toRightOf="@id/iv_account_photo"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_grey_circle_settingspage"
        android:layout_marginTop="45dp"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/v_settings_cotainer_for_edit"
        app:layout_constraintRight_toRightOf="@id/v_settings_cotainer_for_edit"
        app:layout_constraintLeft_toLeftOf="@id/v_settings_cotainer_for_edit"
        app:layout_constraintBottom_toBottomOf="@id/v_settings_cotainer_for_edit"
        android:src="@drawable/ic_edit"
        android:background="@color/secondary_black"
        />

    <EditText
        android:id="@+id/et_settingsPage_name"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/rectangle_rounded"
        android:backgroundTint="@color/light_grey"
        android:hint="Name"
        tools:text="Radimir Karabash"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="16dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="28dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:inputType="text"
        android:maxLines="1"/>

    <View
        android:id="@+id/v_settingsPage_line"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_settingsPage_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/accent"
        />
    
    <TextView
        android:id="@+id/tv_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_settingsPage_line"
        android:text="@string/change_password"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="28dp"/>

    <EditText
        android:id="@+id/et_settingsPage_newPassword"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        app:layout_constraintTop_toBottomOf="@id/tv_change_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/rectangle_rounded"
        android:backgroundTint="@color/light_grey"
        android:hint="@string/new_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="18dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/et_settingsPage_repeatNewPassword"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        app:layout_constraintTop_toBottomOf="@id/et_settingsPage_newPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/rectangle_rounded"
        android:backgroundTint="@color/light_grey"
        android:hint="@string/repeat_new_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:maxLines="1"
        />

    <Button android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_settingsPage_repeatNewPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/accent"
        android:layout_marginTop="39dp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>