<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"/>

    <View android:id="@+id/v_frame_in_description"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"/>
    <TextView
        android:id="@+id/tv_quizResult_title"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        tools:text="What car is yours?"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginTop="11dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="@id/v_frame_in_description"
        app:layout_constraintLeft_toLeftOf="@id/v_frame_in_description"/>

    <ImageView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintRight_toRightOf="@id/v_frame_in_description"
        app:layout_constraintBottom_toBottomOf="@id/v_frame_in_description"
        android:src="@drawable/sport_car"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/v_frame_in_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/tv_your_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_result_is"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/tv_congratulations"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/tv_result_in_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10 Out Of 20"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/tv_your_result"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="6dp"/>

    <Button android:id="@+id/btn_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/accent"
        android:layout_marginTop="14dp"
        android:layout_marginRight="9dp"
        android:layout_marginLeft="9dp"
        android:text="@string/try_again"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        />
    
    <View
        android:id="@+id/v_red_stroke"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_try_again"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/red"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_inner_constraint"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        android:layout_height="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintBottom_toTopOf="@id/btn_try_again">
        <View
            android:id="@+id/v_green_stroke"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/mint_green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/v_red_stroke"
        app:layout_constraintTop_toTopOf="@id/v_red_stroke"
        app:layout_constraintBottom_toBottomOf="@id/v_red_stroke"
        android:layout_marginEnd="10dp"
        tools:text="50%"
        android:textColor="@color/black"
        android:textStyle="bold"
        />



</androidx.constraintlayout.widget.ConstraintLayout>